nav menu overlapping fixed

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -11,6 +11,10 @@ html {
   /* or smooth */
 }
 
+nav {
+  z-index: 9999 !important;
+}
+
 html,
 body {
   margin: 0;
